# test-task-ai2

./: .gitignore  README.md  env.example  pyproject.toml
client/: app.py
mcp_servers/communications/data/: notes.json
mcp_servers/customers/data/: customers.json
mcp_servers/gmail_mock/: server.py
mcp_servers/gmail_mock/data/: emails.json
mcp_servers/jewelryops_mysql/: init_db.py  server.py
mcp_servers/notion_mock/: server.py
mcp_servers/notion_mock/data/: issues.json
mcp_servers/orders/: server.py
mcp_servers/orders/data/: inventory.json  orders.json
src/jewelryops/: main.py  models.py  settings.py
src/jewelryops/agent/: __init__.py  agent.py  tools.py
src/jewelryops/services/: context_service.py  redis.py
tests/: conftest.py  test_context.py  test_redis_crud.py
