[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "jewelryops-agent"
version = "0.1.0"
description = "JewelryOps AI agent: tool-using agent for inventory and customer management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogen>=0.2.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "websocket-client>=1.8.0",
    "openai>=1.0.0",
    "autogen>=0.10.5",
    "cerebras-cloud-sdk>=1.67.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
